--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.57.4",
     "lucide-react": "^0.544.0",
+    "moment": "^2.30.1",
     "next": "15.5.3",
     "react": "19.1.0",
+    "react-big-calendar": "^1.19.4",
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0"
   },
@@ -28,6 +30,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
+    "@types/react-big-calendar": "^1.16.3",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
